# Kiwi

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  bitbucket-pipelines.yml  q  specs.md
cmake/: FindSDL2.cmake
cmake/macros/: GroupSources.cmake
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/imgui/: imconfig.h
dependencies/imgui-sfml/: imconfig-SFML.h
doc/: features.md
examples/: Expression.kw  Test.kw  Testutf8.kw
kiwi/: builder.py  builtin.py  codegen_test.py  debug.py  environment.py  expressions.py  interpreter.py  print.py  test_add.py  test_all.py  test_codegen.py  test_deduce.py  test_interpreter.py  test_match.py  test_trace.py  test_user_types.py  user_types_test.py
kiwi/codegen/: ir.py
kiwi/operations/: equality.py  replace.py
kiwi/type/: deduce.py  equality.py  infer.py  trace.py  typecheck.py
kiwi/typing/: deduce.py
src/: CMakeLists.txt  Debug.h  Format.h  Types.h  main.cpp  proc.h
src/AST/: AST.h  AbstractType.h  Builder.cpp  Builder.h  CMakeLists.txt  Definition.h  Expression.cpp  Expression.h  KExpression.h  LightAST.h  Module.h  Printing.cpp  Printing.h  Root.h  Stack.h  Statement.cpp  Statement.h  StringDatabase.h  Tag.cpp  Tag.h  TreeOperations.cpp  TreeOperations.h  TreeOps.h  Type.h  TypeExpression.h  Value.cpp  Value.h  Visitor.h
src/AST/TreeOps/: CopyExpression.h  EvalExpression.h  FreeExpression.h  JsonConversion.h  Operators.cpp  Operators.h  PartialEvalExpression.h  PrintExpression.cpp  PrintExpression.h
src/Engine/: CMakeLists.txt  main.cpp  vulkanscene.cpp
src/Engine.old/: CMakeLists.txt
src/GPUAcceleration/: BenchmarkBench.h  CMakeLists.txt  KernelManager.h  MatrixExpr.h  MatrixNaive.h  MatrixNaiveGPUCuda.cpp  MatrixNaiveGPUCuda.cu  MatrixNaiveGPUCuda.h  MatrixNaiveGPUOpenCL.h  OpenCL.h  VectorExpression.h  VectorExpressionMP.h  VectorNaive.h  main.cpp  simd.cpp
src/Lexer/: Buffer.h  CMakeLists.txt  Lexer.h  Stream.h  Tokens.cpp  Tokens.h
src/Logging/: CMakeLists.txt  Log.h
src/Paint/: AssetManager.h  CMakeLists.txt  CollisionEngine.h  Fonts.h  Node.h  NodeEditor.h  NuklearWindow.h  RenderEngine.h  RenderNode.h  RenderTree.h  RenderTreeVisitor.h  SFMLNuklear.cpp  SFMLWindow.h  StyleManager.h  Window.h  main.cpp  node_editor.c  nuklear_main.cpp  utf8symbols.h
src/Parsing/: Buffer.h  CMakeLists.txt  Expected.h  Lexer.cpp  Lexer.h  Optional.h  Parser.h  Parsing.h  Stream.h  Tokens.cpp  Tokens.h  expected.h
src/SDL/: CMakeLists.txt  Collision.h  Configuration.h  ExpressionWorkspace.h  Point.h  RenderEngine.h  RenderNode.h  RenderTreeVisitor.h  RenderingUtils.cpp  RenderingUtils.h  SDLEvent.h  SDLHelper.h  SDLMain.cpp  SDLString.h  SDLTestBed.cpp  SDLWindow.h  SDLWindowManager.h  SDLWrapper.h  String.h  StyleManager.h  TIDE.cpp  UTF8Symbol.h  draft.cpp
src/SDL/Drawable/: BinaryCallDrawable.h  BuiltinDrawable.h  Drawable.cpp  Drawable.h  EditableString.cpp  EditableString.h  ExpressionDrawable.cpp  ExpressionDrawable.h  FunctionCallDrawable.h  FunctionDrawable.h  PlaceholderDrawable.h  RenderEngine.h  RenderEngine.h2  StringDrawable.cpp  StringDrawable.h  UnaryCallDrawable.h  ValueDrawable.h
src/SFML/: CMakeLists.txt  Fonts.h  Node.h  NodeEditor.h  NuklearWindow.h  PrintingPrimitives.h  RenderEngine.h  RenderNode.h  RenderTreeVisitor.h  SDL.h  SFMLNuklear.cpp  SFMLNuklear.h  SFMLWindow.h  StyleManager.h  UTF8Symbol.h  main.cpp  nuklear_main.cpp
src/Subprocess/: main.cpp
src/TaskRunner/: CMakeLists.txt  Task.h  main.cpp  reddit.cpp
tests/: ASTTest.h  BuilderContextTest.h  CMakeLists.txt  LexerTest.h  OptionalTest.h  ParserTest.h  ValueTest.h  gtest_main.cpp
