ADD_SUBDIRECTORY(Parsing)
ADD_SUBDIRECTORY(AST)
ADD_SUBDIRECTORY(Logging)

SET(SRC_LIST
    Debug.h
    Format.h
    Types.h
    main.cpp
)

SET(${CXX_STANDARD_REQUIRED} ON)
ADD_EXECUTABLE(dummy ${SRC_LIST})
TARGET_LINK_LIBRARIES(dummy parsing ast)
SET_PROPERTY(TARGET dummy PROPERTY CXX_STANDARD 14)
