INCLUDE(../../cmake/macros/GroupSources.cmake)
GroupSources(src/SDL)

SET(BOOST_ROOT C:/UserData/dist/boost_1_67_0)
SET(BOOST_LIBRARYDIR C:/UserData/dist/boost_1_67_0/lib64-msvc-14.1)
SET(BOOST_INCLUDEDIR C:/UserData/dist/boost_1_67_0/)
FIND_PACKAGE(Boost 1.67.0 COMPONENTS filesystem) 

INCLUDE_DIRECTORIES(../../dependencies)
INCLUDE_DIRECTORIES(../../dependencies/SDL/include)
INCLUDE_DIRECTORIES(../../dependencies/eigen)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SDL2_TTF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

LINK_DIRECTORIES(${BOOST_LIBRARYDIR})
 
  
file(GLOB_RECURSE SDL_SRC *.cpp)
file(GLOB_RECURSE SDL_HDS *.h *.inc)

#    SDLMain.cpp
#TARGET_LINK_LIBRARIES(sdl_rendering ast parsing ${SDL2_LIBRARY} ${SDL2_TTF_LIBRARY})

SET(${CXX_STANDARD_REQUIRED} ON)
ADD_LIBRARY(sdl_rendering ${SDL_SRC} ${SDL_HDS})
SET_PROPERTY(TARGET sdl_rendering PROPERTY CXX_STANDARD 17)

SET(${CXX_STANDARD_REQUIRED} ON)
ADD_EXECUTABLE(sdl_test_bed SDLTestBed.cpp)
TARGET_LINK_LIBRARIES(sdl_test_bed ast parsing sdl_rendering ${SDL2_LIBRARY} ${SDL2_TTF_LIBRARY})
SET_PROPERTY(TARGET sdl_test_bed PROPERTY CXX_STANDARD 17)

SET(${CXX_STANDARD_REQUIRED} ON)
ADD_EXECUTABLE(TIDE TIDE.cpp)
TARGET_LINK_LIBRARIES(TIDE ast parsing sdl_rendering ${SDL2_LIBRARY} ${SDL2_TTF_LIBRARY} ${Boost_LIBRARIES})
SET_PROPERTY(TARGET TIDE PROPERTY CXX_STANDARD 17)


